<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon" />


    <EditText

        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_input"
        android:drawableEnd="@drawable/ic_email"
        android:maxLength="254"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:textSize="15sp"
        android:singleLine="true"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_input"
        android:drawableEnd="@drawable/ic_lock"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@color/black"
        android:hint="@string/senha"
        android:textSize="15sp"
        android:singleLine="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lightYellow"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/semConta"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/darkGrey"/>


    <Button
        android:id="@+id/btnCreate"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/criar"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>